# runduk-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
legacy/model/: mlp.py  training_embs.py  word2vec.py
legacy/notebooks/: Embeddings.ipynb  Modeling.ipynb  Scrap.ipynb
notebooks/: Embeddings.ipynb  Modeling.ipynb  Scrap.ipynb  latest_old
picker/app/: constants.py  download_hero_pics.py  font_patch.py
picker/app/gui/: __main__.py  main.py  stub.py
picker/app/gui/logic/: core.py  team.pickle  team.py
picker/app/gui/picker_frame/: __init__.py  exploration_slider.py  hero_drafter.py  hero_drafter_button.py  heroes_container.py  main_frame.py  prediction_display.py  rank_menu.py
picker/app/gui/team_frame/: __init__.py  hero_adder.py  hero_adder_button.py  main_frame.py  player_adder.py  player_menu.py  players_display.py  position_menu.py  team_controls.py  team_heroes_display.py
picker/app/logic/: core.py  latest
picker/app/old_python_gui/: main.py
picker/app/old_python_gui/logic/: core.py  latest  team.pickle  team.py
picker/app/old_python_gui/picker_frame/: exploration_slider.py  hero_drafter.py  hero_drafter_button.py  heroes_container.py  main_frame.py  prediction_display.py  rank_menu.py
picker/app/old_python_gui/team_frame/: __init__.py  hero_adder.py  hero_adder_button.py  main_frame.py  player_adder.py  player_menu.py  players_display.py  position_menu.py  team_controls.py  team_heroes_display.py
picker/app/unfinished_web_gui/hero_pics/: fix_pics.py
picker/app/unfinished_web_gui/logic/: core.py  latest  team.pickle
picker/app/unfinished_web_gui/picker_frame/: __init__.py  hero_drafter_button.py  test.py
picker/data/: __main__.py  preprocess.py
picker/model/: __main__.py  constants.py  dataset.py  default_config.yaml  train.py  training_embs.py  training_model.py  transformer.py
picker/scraping/: __main__.py  constants.py  opendota.py  valve.py
