[project]
name = "picker"
version = "0.2.0"
description = "Dota 2 draft assistant — predicts Radiant win probability using a Transformer model"
authors = [
    {name = "qc7", email = "yaz0zero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch>=1.13.1",
    "tqdm>=4.64.1",
    "pandas>=2.0.1",
    "typing-extensions>=4.12.2",
    "orjson>=3.10.15",
    "polars>=1.22.0",
    "pyarrow>=19.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "matplotlib>=3.10.0",
]
dev = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.244",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.244",
    "black>=23.1.0",
]
